--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "mongoose": "^5.0.11"
+    "mongoose": "^5.0.11",
+    "react-bootstrap": "^0.32.1"
   }
 }
