--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongoose": "^5.0.11",
+    "querystring": "^0.2.0",
     "react-bootstrap": "^0.32.1"
   }
 }
